--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,108 +1,141 @@
 body {
   background: #fff;
-  }
-
-.header{
   position: relative;
+  }
+.site--container{
+  width: 65%;
+  margin: 0 auto;
+}
+.header{
   .todo--logo{
     width: 15%;
     height: fit-content;
     position: absolute;
-    left: 3rem;
-    top: -1rem;
+    left: 2rem;
+    top: -2rem;
     img{
       width: 100%;
     }
   }
-}
-.search--box{
-  margin: 3rem auto;
-  width: 60%;
-  border-radius: 20px;
-  padding: .375rem .75rem;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  border: 1px solid #c8c4c4;
-  svg{
-    margin-right: 4px;
-    width: 16px;
-    height: 16px;
-    color: gray;
-
-  }
-  input{
+  .search--box{
     width: 100%;
-    border: none;
-    outline: none;
+    margin: 3rem auto;
+    border-radius: 20px;
+    padding: .375rem .75rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid #c8c4c4;
+    svg{
+      margin-right: 4px;
+      width: 16px;
+      height: 16px;
+      color: gray;
+    }
+    .search--input{
+      width: 100%;
+      border: none;
+      outline: none;
+    }
   }
-}
-.search--box:focus-within{
-  box-shadow: darkgray 2px 2px 10px;
-}
-
-.main{
-  width: 60%;
-  gap: 10%;
-  display: flex;
-  justify-content: center;
-  margin: 1rem auto;
-  .todolist {
-    width: 55%;
+  .search--box:focus-within{
     box-shadow: darkgray 2px 2px 10px;
-    padding: 2rem;
-    border-radius: 10px;
-    min-height: 75vh;
-    background: #dce1fd;
-    form{
-      .top--label{
-        color: black;
-        margin-bottom: 1rem;
-        font-size: 20px;
-      }
-      input,
-      input:focus {
-        outline: none;
-        color: black;
-        background: white;
-        border: none;
-        border-radius: 20px;
-        max-width: 400px;
-      }
-      input:focus{
-        box-shadow: 0 0 5px rgba(122, 177, 214, 0.5) !important;
-      }
-    }
-    .done--tasks li,
-    .undone--tasks li,.all--tasks li, .search--result li{
-      background: #fff ;
-      border-radius: 20px !important;
-      margin-bottom: 5px;
-      color: black ;
-      span{
-        overflow-wrap: anywhere;
-        text-wrap: wrap !important;
-        max-width: 80%;
-      }
-    }
-    .search--result{
-      display: none;
-    }
-
   }
-  .category{
-    width: 33%;
+}
+.main{
+  display: flex;
+  justify-content: space-between;
+  .todo--box{
+      margin-bottom: 2rem;
+      width: 50%;
+      box-shadow: darkgray 2px 2px 10px;
+      padding: 2rem;
+      border-radius: 10px;
+      height: 510px;
+      background: #dce1fd;
+      overflow-y: scroll;
+      scrollbar-width: none;
+      form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        .todo--label{
+          color: black;
+          margin: 0;
+          font-size: 22px;
+        }
+        .todo--input,
+        .todo--input:focus{
+          margin: 0 !important;
+          width: 100%;
+          padding: 5px 10px;
+          outline: none;
+          color: black;
+          background: white;
+          border: none;
+          border-radius: 20px;
+        }
+        .todo--input:focus{
+          box-shadow: 0 0 5px rgba(122, 177, 214, 0.5) !important;
+        }
+      }
+      .task--list li, .search--list li{
+        background: #fff ;
+        border-radius: 20px !important;
+        margin-bottom: 5px;
+        color: black ;
+        .checkbox--style{
+          border: 1px solid #d4d2d2;
+          appearance: none;
+          aspect-ratio: 1;
+          box-sizing: border-box;
+          font-size: 1em;
+          width: 20px;
+          background-color: white;
+          height: 20px;
+          border-radius: 50%;
+          cursor: pointer;
+        }
+        .checkbox--style:checked {
+          background: inherit;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .checkbox--style:checked::after{
+          content: '\2713';
+          font-size: 26px;
+          color: grey;
+        }
+        span{
+          overflow-wrap: anywhere;
+          text-wrap: wrap !important;
+          max-width: 80%;
+        }
+      }
+    li:has(.checkbox--style:checked){
+      background: #dce1fd;
+      filter: brightness(1.03);
+      color: grey;
+    }
+      .search--list{
+        display: none;
+      }
+    }
+  .filter{
+    width: 42%;
     height: fit-content;
-    position: relative;
     display: flex;
     flex-direction: column;
-    .buttons--container{
+    align-items: center;
+    .filter__buttons{
+      width: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      gap: 16px;
       button{
-        min-width: 90px;
+        width: 30%;
         background-color: #dce1fd;
         color: black;
         text-align: center;
@@ -120,44 +153,21 @@ body {
         filter: brightness(.9);
       }
     }
-    img{
-      width: 100%;
+    .filter__logo{
+      width: 70%;
+      height: fit-content;
+      img{
+        width: 100%;
+      }
     }
   }
 }
 
-  .delete {
+.delete, .edit{
+  color: black;
     cursor: pointer;
-  }
-  .filtered{
+}
+.filtered{
     display: none !important;
-  }
-.done--tasks{
-  display: none;
 }
-.undone--tasks{
-  display: none;
-}
-.checkbox--style{
-  border: 1px solid #d4d2d2;
-  appearance: none;
-  aspect-ratio: 1;
-  box-sizing: border-box;
-  font-size: 1em;
-  width: 20px;
-  background-color: white;
-  height: 20px;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.checkbox--style:checked {
-  background-color: #d4d2d2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.checkbox--style:checked::after{
-  content: '\2713';
-  font-size: 24px;
-  color: grey;
-}
+
