--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,7 +1,9 @@
 body {
   background: #fff;
   position: relative;
+  z-index: -1;
   }
+
 .site--container{
   width: 65%;
   margin: 0 auto;
@@ -45,6 +47,7 @@ body {
 .main{
   display: flex;
   justify-content: space-between;
+  position: relative;
   .todo--box{
       margin-bottom: 2rem;
       width: 50%;
@@ -56,6 +59,7 @@ body {
       overflow-y: scroll;
       scrollbar-width: none;
       form{
+        margin: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -80,11 +84,19 @@ body {
           box-shadow: 0 0 5px rgba(122, 177, 214, 0.5) !important;
         }
       }
+    .close--icon{
+      cursor: pointer;
+      font-size: 20px;
+    }
       .task--list li, .search--list li{
         background: #fff ;
         border-radius: 20px !important;
         margin-bottom: 5px;
         color: black ;
+        .edit--box{
+          display: flex;
+          gap: 10px;
+        }
         .checkbox--style{
           border: 1px solid #d4d2d2;
           appearance: none;
@@ -135,6 +147,7 @@ body {
       justify-content: space-between;
       align-items: center;
       button{
+        cursor: pointer;
         width: 30%;
         background-color: #dce1fd;
         color: black;
@@ -150,12 +163,10 @@ body {
       }
       button:focus {
         outline: none;
-        filter: brightness(.9);
       }
     }
     .filter__logo{
-      width: 70%;
-      height: fit-content;
+      width: 80%;
       img{
         width: 100%;
       }
@@ -163,11 +174,43 @@ body {
   }
 }
 
-.delete, .edit{
-  color: black;
-    cursor: pointer;
+.delete, .edit ,.close{
+  cursor: pointer;
 }
 .filtered{
     display: none !important;
 }
+.edit--modal{
+  background: #dce1fd;
+  height: 100px;
+  width: 300px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 25vh;
+  z-index: 20;
+  border-radius: 14px;
+  margin: 0 auto;
+  .close--modal{
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 15px;
+    color: black;
+  }
+  .modal--input{
+    background: inherit;
+    margin: 30px auto;
+    width: 80%;
+    outline: none;
+    border: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #d8d2d2;
+    padding: 5px;
+  }
+  .check--modal{
+    cursor: pointer;
+  }
+}
+
 
