--- a/source/css/style.css
+++ b/source/css/style.css
@@ -93,6 +93,9 @@ body {
         border-radius: 20px !important;
         margin-bottom: 5px;
         color: black ;
+        .delete, .edit ,.close{
+          cursor: pointer;
+        }
         .edit--box{
           display: flex;
           gap: 10px;
@@ -174,9 +177,6 @@ body {
   }
 }
 
-.delete, .edit ,.close{
-  cursor: pointer;
-}
 .filtered{
     display: none !important;
 }
@@ -191,15 +191,19 @@ body {
   z-index: 20;
   border-radius: 14px;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .close--modal{
+    position: absolute;
+    top: 10px;
+    left: 10px;
     cursor: pointer;
     font-size: 16px;
-    margin-left: 15px;
     color: black;
   }
   .modal--input{
     background: inherit;
-    margin: 30px auto;
     width: 80%;
     outline: none;
     border: none;
@@ -207,9 +211,6 @@ body {
     border-right: none;
     border-bottom: 1px solid #d8d2d2;
     padding: 5px;
-  }
-  .check--modal{
-    cursor: pointer;
   }
 }
 
